--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ before_install:
 script:
   - docker run -e CI=true zguanchen/docker-react npm run test
 language: generic
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-central-1"
+  app: "docker-react"
+  env: "Dockerreact-dev"
+  bucket_name: "elasticbeanstalk-eu-central-1-113758841170"
+  bucket_path: "docker-react"
+  on:
+    branch: master
